# birthday-reminder

./: pyproject.toml
birthday_reminder/: __init__.py  __main__.py  database.py  logging.py  main.py  util.py
