[tool.poetry]
name = "birthday-reminder"
version = "0.1.0"
description = "Written by Addin & Hakimi"
authors = ["elysiankukla"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytz = "^2024.2"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[tool.black]
line-length = 120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
