[project]
name = "birthday-reminder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.3",
    "python-telegram-bot[job-queue]>=21.10",
    "pytz>=2024.2",
    "requests>=2.32.3",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pylint]
max-line-length = 120

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ipython>=8.31.0",
    "isort>=5.13.2",
    "pylint>=3.3.3",
]
